--- a/package.json
+++ b/package.json
@@ -11,9 +11,17 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.7.0",
+    "@astrojs/react": "^4.1.0",
+    "@hookform/resolvers": "^3.9.1",
+    "@types/react": "^19.0.1",
+    "@types/react-dom": "^19.0.2",
     "astro": "^4.11.5",
     "prettier": "^3.4.2",
     "prettier-plugin-astro": "^0.14.1",
-    "typescript": "^5.4.5"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.0",
+    "typescript": "^5.4.5",
+    "yup": "^1.5.0"
   }
 }
