--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.2",
     "astro": "^4.11.5",
-    "prettier": "^3.4.2",
-    "prettier-plugin-astro": "^0.14.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.0",
     "typescript": "^5.4.5",
     "yup": "^1.5.0"
+  },
+  "devDependencies": {
+    "prettier": "^3.4.2",
+    "prettier-plugin-astro": "^0.14.1"
   }
 }
